RESOLVED FIXED237630
[Cocoa] metadata cue endTime may not be updated
https://bugs.webkit.org/show_bug.cgi?id=237630
Summary [Cocoa] metadata cue endTime may not be updated
Eric Carlson
Reported 2022-03-08 17:04:50 PST
metadata cue endTime may not be updated
Attachments
Patch (9.69 KB, patch)
2022-03-08 17:17 PST, Eric Carlson
no flags
Eric Carlson
Comment 1 2022-03-08 17:04:55 PST
Eric Carlson
Comment 2 2022-03-08 17:17:10 PST
Peng Liu
Comment 3 2022-03-08 17:23:47 PST
Comment on attachment 454179 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=454179&action=review > Source/WebCore/ChangeLog:10 > + the next data cue from the same track starts. This means we donât know the Nit. "don't". > Source/WebCore/ChangeLog:12 > + given the end time of the media fileâs duration and the actual end time is updated Nit. "media file's"? > Source/WebCore/ChangeLog:22 > + This means that if the media fileâs duration is not known when the text track list Ditto.
Peng Liu
Comment 4 2022-03-08 17:25:39 PST
Comment on attachment 454179 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=454179&action=review > LayoutTests/http/tests/media/hls/track-in-band-hls-metadata-cue-duration.html:20 > + run('video.src = "http://127.0.0.1:8000/media/resources/hls/metadata/prog_index.m3u8"'); Is it possible to avoid using an absolute url here?
Eric Carlson
Comment 5 2022-03-08 17:41:19 PST
Comment on attachment 454179 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=454179&action=review >> Source/WebCore/ChangeLog:10 >> + the next data cue from the same track starts. This means we donât know the > > Nit. "don't". This is just create-pretty-print failing to deal with unicode. >> LayoutTests/http/tests/media/hls/track-in-band-hls-metadata-cue-duration.html:20 >> + run('video.src = "http://127.0.0.1:8000/media/resources/hls/metadata/prog_index.m3u8"'); > > Is it possible to avoid using an absolute url here? It is possible, but most of the http media tests use absolute urls so it doesn't seem necessary.
EWS
Comment 6 2022-03-08 19:35:33 PST
Committed r291029 (248203@main): <https://commits.webkit.org/248203@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 454179 [details].
Eric Carlson
Comment 7 2022-04-19 06:47:21 PDT
*** Bug 239067 has been marked as a duplicate of this bug. ***
Ashutosh Kumar
Comment 8 2022-04-26 00:15:06 PDT
(In reply to Eric Carlson from comment #7) > *** Bug 239067 has been marked as a duplicate of this bug. *** Can you please let me know In which version of Safari this fix will be available?
Ashutosh Kumar
Comment 9 2022-05-03 22:27:12 PDT
Could you please let me know which version of Safari this fix will be available?
Note You need to log in before you can comment on or make changes to this bug.